--- a/app/src/main/res/layout/activity_new_dhaba.xml
+++ b/app/src/main/res/layout/activity_new_dhaba.xml
@@ -18,6 +18,10 @@
             name="stepnumber"
             type="Integer" />
 
+        <variable
+            name="isUpdate"
+            type="Boolean" />
+
     </data>
 
     <LinearLayout
@@ -36,7 +40,8 @@
             android:id="@+id/llSteps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="@{isUpdate ? View.GONE : View.VISIBLE}">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -214,8 +219,9 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="scrollable"
             android:background="@color/white"
+            android:visibility="@{isUpdate ? View.VISIBLE : View.GONE}"
+            app:tabMode="scrollable"
             app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
             app:tabTextColor="@color/tabs_text_selector">
 
