block api and some bug fixes

--- a/app/src/main/res/drawable/primary_color_btn_selector.xml
+++ b/app/src/main/res/drawable/primary_color_btn_selector.xml
@@ -7,12 +7,18 @@
             <corners android:radius="@dimen/_2sdp" />
         </shape>
     </item>
-    <item android:state_pressed="true">
+    <item>
         <shape>
             <solid android:color="@color/colorPrimaryDark" />
             <corners android:radius="@dimen/_2sdp" />
         </shape>
     </item>
 
+    <item android:state_enabled="false">
+        <shape>
+            <solid android:color="@color/grey" />
+            <corners android:radius="@dimen/_2sdp" />
+        </shape>
+    </item>
 
 </selector>
