--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -21,6 +21,10 @@
             type="com.transport.mall.model.DhabaModel" />
 
         <variable
+            name="owner"
+            type="com.transport.mall.model.DhabaOwnerModel" />
+
+        <variable
             name="user"
             type="com.transport.mall.model.UserModel" />
 
@@ -189,7 +193,7 @@
                 android:gravity="center_vertical">
 
                 <com.transport.mall.utils.custom.CircleImageView
-                    loadImage="@{model.images}"
+                    loadImage="@{owner.ownerPic}"
                     placeholder="@{R.drawable.ic_profile_pic_placeholder}"
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
@@ -210,7 +214,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{model.ownerName}"
+                        android:text="@{owner.ownerName}"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
@@ -224,12 +228,10 @@
                 android:gravity="center">
 
                 <com.transport.mall.utils.custom.CircleImageView
-                    loadImage="@{model.images}"
-                    placeholder="@{R.drawable.ic_image_placeholder}"
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:src="@drawable/demo_profile_pic_2" />
+                    android:src="@drawable/ic_profile_pic_placeholder" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
