--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -29,6 +29,10 @@
             type="com.transport.mall.model.UserModel" />
 
         <variable
+            name="bankDetailsModel"
+            type="com.transport.mall.model.BankDetailsModel" />
+
+        <variable
             name="isUpdate"
             type="Boolean" />
     </data>
@@ -108,7 +112,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
                         android:maxLength="15"
-                        android:text="@={viewModel.gstNumber}"
+                        android:text="@={bankDetailsModel.gstNumber}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -131,7 +135,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
                         android:maxLength="11"
-                        android:text="@={viewModel.ifscCode}"
+                        android:text="@={bankDetailsModel.ifscCode}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -154,7 +158,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
-                        android:text="@={viewModel.accountName}"
+                        android:text="@={bankDetailsModel.accountName}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -177,7 +181,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
                         android:maxLength="10"
-                        android:text="@={viewModel.panNumber}"
+                        android:text="@={bankDetailsModel.panNumber}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
